--- a/Examples/Stereo/EuRoC_Empty.yaml
+++ b/Examples/Stereo/EuRoC_Empty.yaml
@@ -114,3 +114,15 @@ Viewer.ViewpointY: -0.7
 Viewer.ViewpointZ: -1.8
 Viewer.ViewpointF: 500
 
+
+#--------------------------------------------------------------------------------------------
+# Line Parameters
+#--------------------------------------------------------------------------------------------
+mdThr: 2.0
+gamma: 0.5
+mappingThr: 2.0
+ldType: empty
+lineDetectionsPath: empty
+lineDescriptorsPath: empty
+minLineLen: 25
+maxInCell: 0
