--- a/Examples/Stereo/KITTI03_Empty.yaml
+++ b/Examples/Stereo/KITTI03_Empty.yaml
@@ -5,10 +5,10 @@
 #--------------------------------------------------------------------------------------------
 
 # Camera calibration and distortion parameters (OpenCV) 
-Camera.fx: 718.856
-Camera.fy: 718.856
-Camera.cx: 607.1928
-Camera.cy: 185.2157
+Camera.fx: 721.5377
+Camera.fy: 721.5377
+Camera.cx: 609.5593
+Camera.cy: 172.854
 
 Camera.k1: 0.0
 Camera.k2: 0.0
@@ -22,13 +22,13 @@ Camera.height: 376
 Camera.fps: 10.0
 
 # stereo baseline times fx
-Camera.bf: 386.1448
+Camera.bf: 387.5744
 
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
 
 # Close/Far threshold. Baseline times.
-ThDepth: 35
+ThDepth: 40
 
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
@@ -64,3 +64,14 @@ Viewer.ViewpointY: -100
 Viewer.ViewpointZ: -0.1
 Viewer.ViewpointF: 2000
 
+#--------------------------------------------------------------------------------------------
+# Line Parameters
+#--------------------------------------------------------------------------------------------
+mdThr: 2.0
+gamma: 0.5
+mappingThr: 2.0
+ldType: empty
+lineDetectionsPath: empty
+lineDescriptorsPath: empty
+minLineLen: 25
+maxInCell: 0
